--- a/main.css
+++ b/main.css
@@ -65,9 +65,9 @@ body {
     /*width: 30px;*/
 /*}*/
 
-#hoverThickness50Button {
+#xLargeThicknessSquareBackground  {
     position: absolute;
-    margin-left: 151px;
+    margin-left: 152px;
     height: 60px;
     width: 60px;
     background-color: #1a1a1a;
@@ -77,9 +77,9 @@ body {
     transition: 0.3s ease-in-out;
 }
 
-#hoverThickness25Button {
+#largeThicknessSquareBackground {
     position: absolute;
-    margin-left: 94px;
+    margin-left: 95px;
     height: 60px;
     width: 40px;
     background-color: #1a1a1a;
@@ -89,9 +89,9 @@ body {
     transition: 0.3s ease-in-out;
 }
 
-#hoverThickness10Button {
+#mediumThicknessSquareBackground {
     position: absolute;
-    margin-left: 42px;
+    margin-left: 43px;
     height: 60px;
     width: 30px;
     background-color: #1a1a1a;
@@ -101,7 +101,7 @@ body {
     transition: 0.3s ease-in-out;
 }
 
-#hoverThickness5Button {
+#smallThicknessSquareBackground {
     position: absolute;
     height: 60px;
     width: 20px;
@@ -123,44 +123,44 @@ body {
     transition: 0.3s ease-in-out;
 }
 
-#thickness5 {
+#smallThickness {
     position: relative;
     margin-left: 5px;
     height: 10px;
     width: 10px;
 }
 
-#thickness5:hover {
+#smallThickness:hover {
     cursor: pointer;
 }
 
-#thickness10 {
+#mediumThickness {
     position: relative;
     height: 20px;
     width: 20px;
 }
 
-#thickness10:hover {
+#mediumThickness:hover {
     cursor: pointer;
 }
 
-#thickness25 {
+#largeThickness {
     position: relative;
     height: 30px;
     width: 30px;
 }
 
-#thickness25:hover {
+#largeThickness:hover {
     cursor: pointer;
 }
 
-#thickness50 {
+#xLargeThickness {
     position: relative;
     height: 40px;
     width: 40px;
 }
 
-#thickness50:hover {
+#xLargeThickness:hover {
     cursor: pointer;
 }
 
@@ -182,6 +182,10 @@ body {
 
 #typeSection {
     color: white;
+}
+
+.fa-paint-brush {
+    transition: 0.7s ease-in-out;
 }
 
 #penSpacing {
@@ -271,7 +275,7 @@ body {
     transition: 0.3s ease-in-out;
 }
 
-.hoverColorButton {
+.colorSquareBackground {
     position: absolute;
     margin-left: 15px;
     margin-top: -5px;
